--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,11 @@
 machine:
   services:
     - docker
+
+
+deployment:
+  hub:
+    branch: master
+    commands:
+      - docker login -e h.nagarajmail@gmail.com -u harishnag -p Ranj1982!
+      - docker push harishnag/onthego
