--- a/circle.yml
+++ b/circle.yml
@@ -7,9 +7,10 @@ dependencies:
   pre:
     - docker version
     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - docker build -t harishnag/onthego:fromcircleci .
 
 deployment:
   hub:
     branch: master
     commands:
-      - docker push harishnag/onthego
+      - docker push harishnag/onthego:fromcircleci
