--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ dependencies:
 
   pre:
     - docker version
-    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
     - docker build -t harishnag/onthego:fromcircleci .
 
 deployment:
