--- a/circle.yml
+++ b/circle.yml
@@ -7,10 +7,10 @@ dependencies:
   pre:
     - docker version
     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-    - docker build -t harishnag/newrepo:fromcircleci .
+    - docker build -t harishnag/newrepo:$CIRCLE_SHA1 .
 
 deployment:
   hub:
     branch: master
     commands:
-      - docker push harishnag/newrepo:fromcircleci
+      - docker push harishnag/newrepo:$CIRCLE_SHA1
